
icon:plus[] OrientDB: The included OrientDB Studio has been updated to version 2.2.31.

icon:plus[] Config: It is now possible to configure the JVM arguments of the embedded Elasticsearch server via the `search.embeddedArguments` property.

CAUTION: The `mesh.yml` search section has been updated. The `search.url` property replaces the `search.hosts` property.

[source,yaml]
----
search:
  url: "http://localhost:9200"
  timeout: 8000
  startEmbedded: false
----

[[v0.15.0]]
== 0.15.0 (31.01.2018)

CAUTION: The embedded Elasticsearch was removed and replaced by a connector to a dedicated Elasticsearch server. It is highly recommended to verify existing queries due to breaking changes between Elasticsearch version 2.4 and 6.1.
Please also check the Elasticsearch changelog: link:https://www.elastic.co/guide/en/elasticsearch/reference/current/release-notes-6.1.0.html[Elasticsearch Changelog]

CAUTION: Configuration: The `mesh.yml` format has been updated. Please remove the `search` section or replace it with the following settings.

[source,json]
----
search:
  hosts:
  - hostname: "localhost"
    port: 9200
    protocol: "http"
  startEmbeddedES: true
----

CAUTION: The Elasticsearch update may affect custom mappings within your schemas. You may need to manually update your schemas.

Elasticsearch 6.1 compliant example for the commonly used raw field:

[source,json]
----
{
    "fields": {
        "raw": {
            "type": "keyword",
            "index": true
        }
    }
}
----

CAUTION: The `unfilteredCount` GraphQL paging property has been removed. You can now use the `totalCount` property instead.

CAUTION: Gentics Mesh will automatically extract and start an embedded Elasticsearch server into the `elasticsearch` folder. The old search index (e.g: `data/searchIndex`) can be removed. 

CAUTION: The user which is used to run the process within the docker image has been changed. You may need to update your data volume ownership to uid/gid 1000.
